@@ -43,7 +43,7 @@ MainWidget::MainWidget(QWidget *parent)
   //
   // Read Command Options
   //
-  CmdSwitch *cmd=new CmdSwitch("walltime-panel",VERSION,RDLIBRARYB_USAGE);
+  CmdSwitch *cmd=new CmdSwitch("walltime-panel",PACKAGE_VERSION,RDLIBRARYB_USAGE);
   for(unsigned i=0;i<cmd->keys();i++) {
   }
   delete cmd;
@@ -78,7 +78,7 @@ MainWidget::MainWidget(QWidget *parent)
   //
   // Window Title Bar
   //
-  setWindowTitle(tr("RDLibrary Remote")+" v"+VERSION+
+  setWindowTitle(tr("RDLibrary Remote")+" v"+PACKAGE_VERSION+
 		 " [Host: "+cnf->serverHostname()+
 		 ",User: "+cnf->serverUsername()+"]");
   setWindowIcon(QPixmap(rdlibraryb_16x16_xpm));
